--- a/System/Database/Configuration.ini
+++ b/System/Database/Configuration.ini
@@ -6,7 +6,7 @@ Host = '127.0.0.1'
 Database = SpherePlatformProtocol
 Consumer = false
 
-[Platform:Gatekeeper:Authorization:Consumer]
+[Platform:Gatekeeper:Consumer]
 Driver = 'MariaDb'
 Username = 'root'
 Password = 'sphere'
