Structure & Style Refactor

--- a/System/Debugger/Configuration.ini
+++ b/System/Debugger/Configuration.ini
@@ -1,18 +1,18 @@
 [BenchmarkLogger]
 
-Enabled = true
+Enabled = false
 
 [CacheLogger]
 
-Enabled = true
+Enabled = false
 
 [ErrorLogger]
 
-Enabled = true
+Enabled = false
 
 [QueryLogger]
 
-Enabled = true
+Enabled = false
 
 [Debugger]
 
