--- a/System/Database/Configuration.ini
+++ b/System/Database/Configuration.ini
@@ -3,7 +3,14 @@ Driver = 'MariaDb'
 Username = 'root'
 Password = 'sphere'
 Host = '127.0.0.1'
-Database = SpherePlatformProtocol
+Database = SpherePlatformUtility
+Consumer = false
+[Platform:Utility:Favorite]
+Driver = 'MariaDb'
+Username = 'root'
+Password = 'sphere'
+Host = '127.0.0.1'
+Database = SpherePlatformUtility
 Consumer = false
 
 [Platform:Gatekeeper:Consumer]
