--- a/System/Database/Configuration.ini
+++ b/System/Database/Configuration.ini
@@ -20,21 +20,7 @@ Password = 'sphere'
 Host = '127.0.0.1'
 Database = SpherePlatformGatekeeper
 Consumer = false
-[Platform:Gatekeeper:Authorization:Account]
-Driver = 'MariaDb'
-Username = 'root'
-Password = 'sphere'
-Host = '127.0.0.1'
-Database = SpherePlatformGatekeeper
-Consumer = false
-[Platform:Gatekeeper:Authorization:Access]
-Driver = 'MariaDb'
-Username = 'root'
-Password = 'sphere'
-Host = '127.0.0.1'
-Database = SpherePlatformGatekeeper
-Consumer = false
-[Platform:Gatekeeper:Authorization:Group]
+[Platform:Gatekeeper:Authorization]
 Driver = 'MariaDb'
 Username = 'root'
 Password = 'sphere'
