--- a/System/Debugger/Configuration.ini
+++ b/System/Debugger/Configuration.ini
@@ -1,20 +1,20 @@
 [BenchmarkLogger]
 
-Enabled = true
+Enabled = false
 
 [CacheLogger]
 
-Enabled = true
+Enabled = false
 
 [ErrorLogger]
 
-Enabled = true
+Enabled = false
 
 [QueryLogger]
 
-Enabled = true
+Enabled = false
 
 [Debugger]
 
-Enabled = true
+Enabled = false
 
