--- a/System/Database/Configuration.ini
+++ b/System/Database/Configuration.ini
@@ -34,3 +34,12 @@ Password = 'sphere'
 Host = '127.0.0.1'
 Database = SpherePlatformGatekeeper
 Consumer = false
+
+
+[Reporting:DataWareHouse]
+Driver = 'MariaDb'
+Username = 'root'
+Password = 'sphere'
+Host = '127.0.0.1'
+Database = Market
+Consumer = true
