--- a/System/Database/Configuration.ini
+++ b/System/Database/Configuration.ini
@@ -12,6 +12,13 @@ Password = 'sphere'
 Host = '127.0.0.1'
 Database = SpherePlatformUtility
 Consumer = false
+[Platform:Utility:Translation]
+Driver = 'MariaDb'
+Username = 'root'
+Password = 'sphere'
+Host = '127.0.0.1'
+Database = SpherePlatformUtility
+Consumer = false
 
 [Platform:Gatekeeper:Consumer]
 Driver = 'MariaDb'
