--- a/System/Database/Configuration.ini
+++ b/System/Database/Configuration.ini
@@ -19,6 +19,13 @@ Password = 'sphere'
 Host = '127.0.0.1'
 Database = SpherePlatformUtility
 Consumer = false
+[Platform:Utility:Example]
+Driver = 'MariaDb'
+Username = 'root'
+Password = 'sphere'
+Host = '127.0.0.1'
+Database = SpherePlatformUtility
+Consumer = false
 
 [Platform:Gatekeeper:Consumer]
 Driver = 'MariaDb'
@@ -34,7 +41,7 @@ Password = 'sphere'
 Host = '127.0.0.1'
 Database = SpherePlatformGatekeeper
 Consumer = false
-[Platform:Gatekeeper:Profil]
+[Platform:Gatekeeper:Profile]
 Driver = 'MariaDb'
 Username = 'root'
 Password = 'sphere'
