Vorbereitung Import Umsätze

--- a/System/Database/Configuration.ini
+++ b/System/Database/Configuration.ini
@@ -57,3 +57,11 @@ Password = 'sphere'
 Host = '127.0.0.1'
 Database = Market
 Consumer = true
+
+[Reporting:DataWareHouse:Sales]
+Driver = 'MariaDb'
+Username = 'root'
+Password = 'sphere'
+Host = '127.0.0.1'
+Database = SpherePlatformUtility
+Consumer = false
