Import Presto, Excel-Download

--- a/System/Database/Configuration.ini
+++ b/System/Database/Configuration.ini
@@ -65,3 +65,11 @@ Password = 'sphere'
 Host = '127.0.0.1'
 Database = SpherePlatformUtility
 Consumer = false
+
+[Reporting:DataWareHouse:Presto]
+Driver = 'MariaDb'
+Username = 'root'
+Password = 'sphere'
+Host = '127.0.0.1'
+Database = SpherePlatformUtility
+Consumer = false
