--- a/System/Database/Configuration.ini
+++ b/System/Database/Configuration.ini
@@ -58,6 +58,14 @@ Host = '127.0.0.1'
 Database = Market
 Consumer = true
 
+[Competition:DataWareHouse]
+Driver = 'MariaDb'
+Username = 'root'
+Password = 'sphere'
+Host = '127.0.0.1'
+Database = Market
+Consumer = true
+
 [Reporting:DataWareHouse:Sales]
 Driver = 'MariaDb'
 Username = 'root'
