--- a/System/Database/Configuration.ini
+++ b/System/Database/Configuration.ini
@@ -1,83 +1,94 @@
 [Platform:System:Protocol]
-Driver = 'MariaDb'
-Username = 'root'
-Password = 'sphere'
-Host = '127.0.0.1'
+Driver = 'MsSql'
+Username = 'sa'
+Password = '!saSQL!'
+Host = '192.168.100.41'
+Port = '60102'
 Database = SpherePlatformUtility
 Consumer = false
 [Platform:Utility:Favorite]
-Driver = 'MariaDb'
-Username = 'root'
-Password = 'sphere'
-Host = '127.0.0.1'
+Driver = 'MsSql'
+Username = 'sa'
+Password = '!saSQL!'
+Host = '192.168.100.41'
+Port = '60102'
 Database = SpherePlatformUtility
 Consumer = false
 [Platform:Utility:Translation]
-Driver = 'MariaDb'
-Username = 'root'
-Password = 'sphere'
-Host = '127.0.0.1'
+Driver = 'MsSql'
+Username = 'sa'
+Password = '!saSQL!'
+Host = '192.168.100.41'
+Port = '60102'
 Database = SpherePlatformUtility
 Consumer = false
 [Platform:Utility:Example]
-Driver = 'MariaDb'
-Username = 'root'
-Password = 'sphere'
-Host = '127.0.0.1'
+Driver = 'MsSql'
+Username = 'sa'
+Password = '!saSQL!'
+Host = '192.168.100.41'
+Port = '60102'
 Database = SpherePlatformUtility
 Consumer = false
 
 [Platform:Gatekeeper:Consumer]
-Driver = 'MariaDb'
-Username = 'root'
-Password = 'sphere'
-Host = '127.0.0.1'
+Driver = 'MsSql'
+Username = 'sa'
+Password = '!saSQL!'
+Host = '192.168.100.41'
+Port = '60102'
 Database = SpherePlatformGatekeeper
 Consumer = false
 [Platform:Gatekeeper:Authorization]
-Driver = 'MariaDb'
-Username = 'root'
-Password = 'sphere'
-Host = '127.0.0.1'
+Driver = 'MsSql'
+Username = 'sa'
+Password = '!saSQL!'
+Host = '192.168.100.41'
+Port = '60102'
 Database = SpherePlatformGatekeeper
 Consumer = false
 [Platform:Gatekeeper:Profile]
-Driver = 'MariaDb'
-Username = 'root'
-Password = 'sphere'
-Host = '127.0.0.1'
+Driver = 'MsSql'
+Username = 'sa'
+Password = '!saSQL!'
+Host = '192.168.100.41'
+Port = '60102'
 Database = SpherePlatformGatekeeper
 Consumer = false
 
 
 [Reporting:DataWareHouse]
-Driver = 'MariaDb'
-Username = 'root'
-Password = 'sphere'
-Host = '127.0.0.1'
+Driver = 'MsSql'
+Username = 'sa'
+Password = '!saSQL!'
+Host = '192.168.100.41'
+Port = '60102'
 Database = Market
 Consumer = true
 
 [Competition:DataWareHouse]
-Driver = 'MariaDb'
-Username = 'root'
-Password = 'sphere'
-Host = '127.0.0.1'
+Driver = 'MsSql'
+Username = 'sa'
+Password = '!saSQL!'
+Host = '192.168.100.41'
+Port = '60102'
 Database = Market
 Consumer = true
 
 [Reporting:DataWareHouse:Sales]
-Driver = 'MariaDb'
-Username = 'root'
-Password = 'sphere'
-Host = '127.0.0.1'
+Driver = 'MsSql'
+Username = 'sa'
+Password = '!saSQL!'
+Host = '192.168.100.41'
+Port = '60102'
 Database = SpherePlatformUtility
 Consumer = false
 
 [Reporting:DataWareHouse:Presto]
-Driver = 'MariaDb'
-Username = 'root'
-Password = 'sphere'
-Host = '127.0.0.1'
+Driver = 'MsSql'
+Username = 'sa'
+Password = '!saSQL!'
+Host = '192.168.100.41'
+Port = '60102'
 Database = SpherePlatformUtility
 Consumer = false
