--- a/System/Database/Configuration.ini
+++ b/System/Database/Configuration.ini
@@ -2,32 +2,32 @@
 Driver = 'MsSql'
 Username = 'sa'
 Password = '!saSQL!'
-Host = '192.168.100.39'
-Port = '60102'
+Host = '192.168.200.151\\VORORDER'
+Port = '49181'
 Database = SpherePlatformUtility
 Consumer = false
 [Platform:Utility:Favorite]
 Driver = 'MsSql'
 Username = 'sa'
 Password = '!saSQL!'
-Host = '192.168.100.39'
-Port = '60102'
+Host = '192.168.200.151\\VORORDER'
+Port = '49181'
 Database = SpherePlatformUtility
 Consumer = false
 [Platform:Utility:Translation]
 Driver = 'MsSql'
 Username = 'sa'
 Password = '!saSQL!'
-Host = '192.168.100.39'
-Port = '60102'
+Host = '192.168.200.151\\VORORDER'
+Port = '49181'
 Database = SpherePlatformUtility
 Consumer = false
 [Platform:Utility:Example]
 Driver = 'MsSql'
 Username = 'sa'
 Password = '!saSQL!'
-Host = '192.168.100.39'
-Port = '60102'
+Host = '192.168.200.151\\VORORDER'
+Port = '49181'
 Database = SpherePlatformUtility
 Consumer = false
 
@@ -35,24 +35,24 @@ Consumer = false
 Driver = 'MsSql'
 Username = 'sa'
 Password = '!saSQL!'
-Host = '192.168.100.39'
-Port = '60102'
+Host = '192.168.200.151\\VORORDER'
+Port = '49181'
 Database = SpherePlatformGatekeeper
 Consumer = false
 [Platform:Gatekeeper:Authorization]
 Driver = 'MsSql'
 Username = 'sa'
 Password = '!saSQL!'
-Host = '192.168.100.39'
-Port = '60102'
+Host = '192.168.200.151\\VORORDER'
+Port = '49181'
 Database = SpherePlatformGatekeeper
 Consumer = false
 [Platform:Gatekeeper:Profile]
 Driver = 'MsSql'
 Username = 'sa'
 Password = '!saSQL!'
-Host = '192.168.100.39'
-Port = '60102'
+Host = '192.168.200.151\\VORORDER'
+Port = '49181'
 Database = SpherePlatformGatekeeper
 Consumer = false
 
@@ -61,8 +61,8 @@ Consumer = false
 Driver = 'MsSql'
 Username = 'sa'
 Password = '!saSQL!'
-Host = '192.168.100.39'
-Port = '60102'
+Host = '192.168.200.151\\VORORDER'
+Port = '49181'
 Database = Market
 Consumer = true
 
@@ -70,8 +70,8 @@ Consumer = true
 Driver = 'MsSql'
 Username = 'sa'
 Password = '!saSQL!'
-Host = '192.168.100.39'
-Port = '60102'
+Host = '192.168.200.151\\VORORDER'
+Port = '49181'
 Database = Market
 Consumer = true
 
@@ -79,8 +79,8 @@ Consumer = true
 Driver = 'MsSql'
 Username = 'sa'
 Password = '!saSQL!'
-Host = '192.168.100.39'
-Port = '60102'
+Host = '192.168.200.151\\VORORDER'
+Port = '49181'
 Database = SpherePlatformUtility
 Consumer = false
 
@@ -88,7 +88,7 @@ Consumer = false
 Driver = 'MsSql'
 Username = 'sa'
 Password = '!saSQL!'
-Host = '192.168.100.39'
-Port = '60102'
+Host = '192.168.200.151\\VORORDER'
+Port = '49181'
 Database = SpherePlatformUtility
 Consumer = false
