Diagramme, PM-MC-Import

--- a/System/Database/Configuration.ini
+++ b/System/Database/Configuration.ini
@@ -92,3 +92,12 @@ Host = '192.168.200.151\\VORORDER'
 Port = '49181'
 Database = SpherePlatformUtility
 Consumer = false
+
+[Reporting:DataWareHouse:BasicData]
+Driver = 'MsSql'
+Username = 'sa'
+Password = '!saSQL!'
+Host = '192.168.200.151\\VORORDER'
+Port = '49181'
+Database = SpherePlatformUtility
+Consumer = false
